--- a/app2.csproj
+++ b/app2.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Faker.Net" Version="1.5.138" />
+  </ItemGroup>
+
 </Project>
